--- a/moveit_config/config/ros_controllers.yaml
+++ b/moveit_config/config/ros_controllers.yaml
@@ -1,7 +1,7 @@
 # Simulation settings for using moveit_sim_controllers
 moveit_sim_hw_interface:
-  joint_model_group: arm
-  joint_model_group_pose: home
+  joint_model_group: manipulator_framed
+  joint_model_group_pose: gripper
 # Settings for ros_control_boilerplate control loop
 generic_hw_control_loop:
   loop_hz: 300
@@ -16,18 +16,18 @@ hardware_interface:
     - joint5
     - joint6
     - joint7
+    
   sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
 joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: 50
-  
 controller_list:
   - name: manipulator_framed_controller
     action_ns: follow_joint_trajectory
-    default: True
     type: FollowJointTrajectory
+    default: true
     joints:
       - joint1
       - joint2
@@ -36,50 +36,22 @@ controller_list:
       - joint5
       - joint6
       - joint7
-
+    
 manipulator_framed_controller:
-  type: effort_controllers/JointTrajectoryController
-  joints:
-    - joint1
-    - joint2
-    - joint3
-    - joint4
-    - joint5
-    - joint6
-    - joint7
-  gains:
-    joint1:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint2:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint3:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint4:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint5:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint6:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
-    joint7:
-      p: 100
-      d: 1
-      i: 1
-      i_clamp: 1
+    type: effort_controllers/JointTrajectoryController
+    joints:
+        - joint1
+        - joint2
+        - joint3
+        - joint4
+        - joint5
+        - joint6
+        - joint7
+    gains:
+        joint1: { p: 100000, d: 100, i: 0.01, i_clamp: 10000 }
+        joint2: { p: 30000, d: 10, i: 0.01, i_clamp: 10000 }
+        joint3: { p: 18000, d: 10, i: 0.01, i_clamp: 1 }
+        joint4: { p: 18000, d: 10, i: 0.01, i_clamp: 10000 }
+        joint5: { p: 12000, d: 10, i: 0.01, i_clamp: 1 }
+        joint6: { p: 7000, d: 10, i: 0.01, i_clamp: 1 }
+        joint7: { p: 2000, d: 10, i: 0.01, i_clamp: 1 }
