--- a/moveit_config/config/stomp_planning.yaml
+++ b/moveit_config/config/stomp_planning.yaml
@@ -1,5 +1,5 @@
-stomp/manipulator_framed:
-  group_name: manipulator_framed
+stomp/manipulator:
+  group_name: manipulator
   optimization:
     num_timesteps: 60
     num_iterations: 40
