--- a/sp_control/CMakeLists.txt
+++ b/sp_control/CMakeLists.txt
@@ -119,7 +119,7 @@ include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
 )
-
+INCLUDE_DIRECTORIES(/home/lyc/VisualOdometry/src/sp_control/include/sp_control)
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/sp_control.cpp
@@ -134,6 +134,8 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/sp_control_node.cpp)
+# add_executable(imu src/imu.cpp)
+add_executable(speedpub src/speedpub.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -146,9 +148,12 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
+# target_link_libraries(imu
 #   ${catkin_LIBRARIES}
 # )
+target_link_libraries(speedpub
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
